# big

./: Cargo.toml  cspell.config.yaml  pyproject.toml
configs/: .gitignore  task.conf
control/: .gitignore  bench.py  common.py  deploy.py  download_logs.py  force_stop.py  load_config.py  prefill.py  remote_build.py  server_start.py  server_stop.py  setup_hosts.py
control/clusters/: __init__.py  terraform.py
control/terraform/: main.tf
data/: plots.ipynb  spawn-db-gets.csv
examples/: bench-plain-storage.rs  bench-storage.rs  eval-db.rs  narwhal.rs  spawn-db-gets.rs  storage-archive.rs
src/: db.rs  latency.rs  lib.rs  logging.rs  main.rs  narwhal.rs  network.rs  parse.rs  storage.rs  storage2.rs  ycsb.rs
src/narwhal/: network.rs
src/storage/: archive.rs  bench.rs  db.rs  network.rs  plain.rs
src/storage2/: plain.rs  sched.rs
