[package]
name = "big"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
bincode = "2.0.1"
bytes = "1.10.1"
primitive-types = "0.13.1"
quinn = "0.11.9"
rand = "0.9.2"
rocksdb = "0.24.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tracing = "0.1.41"
