[package]
name = "big"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
bincode = "2.0.1"
bytes = "1.10.1"
quinn = "0.11.9"
rand = "0.9.2"
reed-solomon-simd = "3.0.1"
rocksdb = "0.24.0"
sha2 = "0.10.9"
tempfile = "3.22.0"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["join-map"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.release]
debug = true
